update typo, add more explaining

--- a/code/data_volume_summaries/data_volume_summaries_template.ipynb
+++ b/code/data_volume_summaries/data_volume_summaries_template.ipynb
@@ -11,7 +11,11 @@
     "\n",
     "## Once you enter the correct Beiwe ID, you should be able to create a somewhat decent looking pdf output by running the following in shell:\n",
     "\n",
-    "# jupyter nbconvert --to pdf --TemplateExporter.exclude_input=True  \"data_volume_summaries.ipynb\""
+    "# jupyter nbconvert --to pdf --TemplateExporter.exclude_input=True  \"data_volume_summaries_template.ipynb\"\n",
+    "\n",
+    "## make sure you replace \"data_volume_summaries_template.ipynb\" with the name of the noteobook if you changed the notebook's nanme. \n",
+    "\n",
+    "## (the notebook name is the title of the notebook, so the report looks nicer if you change the name to something better)"
    ]
   },
   {
@@ -87,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(data_summaries.get_num_users(summaries_path = output_file_path).set_index(\"Data Type\", drop = True))"
+    "print(data_summaries.get_num_users(summaries_path = data_summaries_file_path).set_index(\"Data Type\", drop = True))"
    ]
   },
   {
@@ -109,11 +113,11 @@
     "data_summaries.data_volume_plots(\n",
     "        data_summaries_path = data_summaries_file_path, \n",
     "        output_dir = data_plots_path,\n",
-    "        display_plots = True, \n",
-    "        binary_heatmap = True, \n",
-    "        plot_study_time = True,\n",
-    "        overlay_surveys = True,\n",
-    "        include_y_labels = False\n",
+    "        display_plots = True, #this needs to be true for the notebook to run\n",
+    "        binary_heatmap = True, #if this is False, a continuous data volume measurement will be put on the heatmaps\n",
+    "        plot_study_time = True, #whether to use study time instead of calendar time\n",
+    "        overlay_surveys = True, #whether to overlay survey submissions on top of data\n",
+    "        include_y_labels = False # if you have a ton of users, don't include y labels so you can fit it on one page. \n",
     ")"
    ]
   },
