updates to correspond with changes to how forest functions are structured now

--- a/code/forest_mano/forest_and_mano_usage.ipynb
+++ b/code/forest_mano/forest_and_mano_usage.ipynb
@@ -241,7 +241,7 @@
     "- For **data_dir**, enter the \"path to the data file directory\". This will be the same directory you downloaded data into.\n",
     "- For **output_dir**, enter the \"path to the file directory where output is to be stored\". \n",
     "- For **tz_str**, enter the time zone where the study was conducted. Here, it's **\"America/New_York.\"** We can use \"pytz.all_timezones\" to check all options.\n",
-    "- For **options**, there are 'daily' or 'hourly' or 'both' for the temporal resolution for summary statistics. Currently, one must pass this as one of the Frequency class imported from Jasmine. So, you may use Frequency.HOURLY, Frequency.DAILY or Frequency.BOTH\n",
+    "- For **options**, there are 'daily' or 'hourly' or 'both' for the temporal resolution for summary statistics. Currently, one must pass this as one of the Frequency class imported from Jasmine. So, you may use Frequency.HOURLY or Frequency.DAILY\n",
     "- For **save_traj**, it's \"True\" if you want to save the trajectories as a csv file, \"False\" if you don't (default: False). Here, we chose **\"True.\"**\n",
     "- For **beiwe_ids**, enter the list of Beiwe IDs to run Forest on. If this is `None`, jasmine will run on all users in the data_dir directory.\n",
     "- For **places_of_interest**, enter a list of places of interest. This list must contain keywords from [openstreetmaps](https://wiki.openstreetmap.org/wiki/OpenStreetBrowser/Category_list)\n",
@@ -261,7 +261,7 @@
     "data_dir = dest_dir\n",
     "gps_output_dir = \"gps_output\"\n",
     "tz_str = \"America/New_York\"\n",
-    "option = Frequency.BOTH\n",
+    "option = Frequency.DAILY\n",
     "save_traj = True \n",
     "beiwe_ids = None\n",
     "places_of_interest = None\n",
@@ -298,9 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now contatenate GPS summaries into one file.\n",
-    "\n",
-    "Note that if frequency was Frequency.BOTH, a subdirectory is created for both daily and hourly summaries. But, if frequency is either Frequency.DAILY or Frequency.HOURLY, individual summaries are created directly in gps_output. "
+    "We will now contatenate GPS summaries into one file. "
    ]
   },
   {
@@ -445,7 +443,7 @@
     "- For **data_dir**, enter the \"path to the data file directory\". \n",
     "- For **accelerometer_output_dir**, enter the \"path to the file directory where output is to be stored\". \n",
     "- For **tz_str**, enter the time zone where the study was conducted. Here, it's **\"America/New_York.\"** \n",
-    "- For **option**, it's 'daily' or 'hourly' or 'both' for the temporal resolution for summary statistics. Here, we chose **\"daily.\"**\n",
+    "- For **frequency**, choose a value of frequency similar as what was used in jasmine. \n",
     "- For **beiwe_ids**, enter the list of Beiwe IDs to run Forest on. If this is `None`, willow will run on all users in the data_dir directory."
    ]
   },
@@ -460,11 +458,41 @@
     "data_dir = dest_dir\n",
     "accelerometer_output_dir = \"accel_output\"\n",
     "tz_str = \"America/New_York\"\n",
-    "option = \"daily\"\n",
+    "frequency = Frequency.DAILY\n",
     "beiwe_ids = None\n",
     "\n",
     "run(data_dir, accelerometer_output_dir, \n",
-    "    tz_str, option, users = beiwe_ids)"
+    "    tz_str, frequency, users = beiwe_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run(study_folder: str, output_folder: str, tz_str: str = None,\n",
+    "        frequency: Frequency = Frequency.DAILY, time_start: str = None,\n",
+    "        time_end: str = None, users: list = None) -> None:\n",
+    "    \"\"\"Runs walking recognition and step counting algorithm over dataset.\n",
+    "    Determine paths to input and output folders, set analysis time frames,\n",
+    "    subjects' local timezone, and time resolution of computed results.\n",
+    "    Args:\n",
+    "        study_folder: string\n",
+    "            local repository with beiwe folders (IDs) for a given study\n",
+    "        output_folder: string\n",
+    "            local repository to store results\n",
+    "        tz_str: string\n",
+    "            local time zone, e.g., \"America/New_York\"\n",
+    "        frequency: Frequency\n",
+    "            summary statistics format, Frequency class at constants.py\n",
+    "        time_start: string\n",
+    "            initial date of study in format: 'YYYY-mm-dd HH_MM_SS'\n",
+    "        time_end: string\n",
+    "            final date of study in format: 'YYYY-mm-dd HH_MM_SS'\n",
+    "        users: list of strings\n",
+    "            beiwe ID selected for computation\n",
+    "    \"\"\""
    ]
   },
   {
