use Frequency class for willow

--- a/code/forest_mano/forest_and_mano_usage.ipynb
+++ b/code/forest_mano/forest_and_mano_usage.ipynb
@@ -256,7 +256,7 @@
    "outputs": [],
    "source": [
     "import forest.jasmine.traj2stats\n",
-    "from forest.jasmine.traj2stats import Frequency\n",
+    "from forest.constants import Frequency\n",
     "\n",
     "data_dir = dest_dir\n",
     "gps_output_dir = \"gps_output\"\n",
@@ -329,7 +329,7 @@
     "- For **data_dir**, enter the \"path to the data file directory\". \n",
     "- For **output_dir**, enter the \"path to the file directory where output is to be stored\". \n",
     "- For **tz_str**, enter the time zone where the study was conducted. Here, it's **\"America/New_York.\"** \n",
-    "- For **options**, it's 'daily' or 'hourly' or 'both' for the temporal resolution for summary statistics. Here, we chose **\"daily.\"**\n",
+    "- For **option**, choose a Frequency value corresponding to the temporal resolution you would like data to be aggregated to. \n",
     "- For **beiwe_ids**, enter the list of Beiwe IDs to run Forest on. If this is `None`, willow will run on all users in the data_dir directory."
    ]
   },
@@ -343,7 +343,7 @@
     "data_dir = dest_dir\n",
     "comm_output_dir = \"comm_output\"\n",
     "tz_str = \"America/New_York\"\n",
-    "option = \"daily\"\n",
+    "option = Frequency.DAILY\n",
     "beiwe_ids = None\n",
     "\n",
     "\n",
