--- a/code/forest_mano/forest_and_mano_usage.ipynb
+++ b/code/forest_mano/forest_and_mano_usage.ipynb
@@ -349,7 +349,7 @@
     "\n",
     "\n",
     "forest.willow.log_stats.log_stats_main(\n",
-    "    data_dir, output_dir, tz_str, option, beiwe_id = beiwe_ids\n",
+    "    data_dir, comm_output_dir, tz_str, option, beiwe_id = beiwe_ids\n",
     ")"
    ]
   },
@@ -463,36 +463,6 @@
     "\n",
     "run(data_dir, accelerometer_output_dir, \n",
     "    tz_str, frequency, users = beiwe_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run(study_folder: str, output_folder: str, tz_str: str = None,\n",
-    "        frequency: Frequency = Frequency.DAILY, time_start: str = None,\n",
-    "        time_end: str = None, users: list = None) -> None:\n",
-    "    \"\"\"Runs walking recognition and step counting algorithm over dataset.\n",
-    "    Determine paths to input and output folders, set analysis time frames,\n",
-    "    subjects' local timezone, and time resolution of computed results.\n",
-    "    Args:\n",
-    "        study_folder: string\n",
-    "            local repository with beiwe folders (IDs) for a given study\n",
-    "        output_folder: string\n",
-    "            local repository to store results\n",
-    "        tz_str: string\n",
-    "            local time zone, e.g., \"America/New_York\"\n",
-    "        frequency: Frequency\n",
-    "            summary statistics format, Frequency class at constants.py\n",
-    "        time_start: string\n",
-    "            initial date of study in format: 'YYYY-mm-dd HH_MM_SS'\n",
-    "        time_end: string\n",
-    "            final date of study in format: 'YYYY-mm-dd HH_MM_SS'\n",
-    "        users: list of strings\n",
-    "            beiwe ID selected for computation\n",
-    "    \"\"\""
    ]
   },
   {
