update gps_stats_main parameters

--- a/code/forest_mano/forest_and_mano_usage.ipynb
+++ b/code/forest_mano/forest_and_mano_usage.ipynb
@@ -241,12 +241,16 @@
     "- For **data_dir**, enter the \"path to the data file directory\". This will be the same directory you downloaded data into.\n",
     "- For **output_dir**, enter the \"path to the file directory where output is to be stored\". \n",
     "- For **tz_str**, enter the time zone where the study was conducted. Here, it's **\"America/New_York.\"** We can use \"pytz.all_timezones\" to check all options.\n",
-    "- For **options**, there are 'daily' or 'hourly' or 'both' for the temporal resolution for summary statistics. Currently, one must pass this as one of the Frequency class imported from Jasmine. So, you may use Frequency.HOURLY or Frequency.DAILY\n",
+    "- For **frequency**, there are 'daily' or 'hourly' or 'both' for the temporal resolution for summary statistics. Currently, one must pass this as one of the Frequency class imported from Jasmine. So, you may use Frequency.HOURLY or Frequency.DAILY\n",
     "- For **save_traj**, it's \"True\" if you want to save the trajectories as a csv file, \"False\" if you don't (default: False). Here, we chose **\"True.\"**\n",
     "- For **beiwe_ids**, enter the list of Beiwe IDs to run Forest on. If this is `None`, jasmine will run on all users in the data_dir directory.\n",
     "- For **places_of_interest**, enter a list of places of interest. This list must contain keywords from [openstreetmaps](https://wiki.openstreetmap.org/wiki/OpenStreetBrowser/Category_list)\n",
-    "- For **place_threshold**, enter the number of minutes required to be spent at a place to count as a place\n",
-    "- For **save_osm_log**, enter whether you want to save the log associated with places of interest. "
+    "\n",
+    "There are also more optional arguments that can be passed to the function, which are located in the Hyperparameters class in the traj2stat.py file. These include:\n",
+    "- For **log_threshold**, enter the number of minutes required to be spent at a place to count as a place\n",
+    "- For **save_osm_log**, enter whether you want to save the log associated with places of interest.\n",
+    "\n",
+    "and others as can been seen in the class definition."
    ]
   },
   {
@@ -255,24 +259,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import forest.jasmine.traj2stats\n",
+    "from forest.jasmine.traj2stats import gps_stats_main, Hyperparameters\n",
     "from forest.constants import Frequency\n",
     "\n",
     "data_dir = dest_dir\n",
     "gps_output_dir = \"gps_output\"\n",
     "tz_str = \"America/New_York\"\n",
-    "option = Frequency.DAILY\n",
+    "freq = Frequency.DAILY\n",
     "save_traj = True \n",
     "beiwe_ids = None\n",
     "places_of_interest = None\n",
-    "place_threshold = None\n",
-    "save_osm_log = False\n",
     "\n",
+    "# if you are not interested in more specific hyperparameters, you can use the default ones\n",
+    "# by setting parameters = None or not passing in the parameters argument\n",
+    "parameters = Hyperparameters()\n",
+    "parameters.save_osm_log = False\n",
+    "parameters.log_threshold = 60\n",
     "\n",
-    "\n",
-    "forest.jasmine.traj2stats.gps_stats_main(\n",
-    "    data_dir, gps_output_dir, tz_str, option, save_traj, places_of_interest = places_of_interest, \n",
-    "    save_osm_log = save_osm_log, threshold = place_threshold, participant_ids = beiwe_ids\n",
+    "gps_stats_main(\n",
+    "    data_dir, gps_output_dir, tz_str, freq, save_traj, places_of_interest = places_of_interest, \n",
+    "    participant_ids = beiwe_ids, parameters = parameters\n",
     ")\n"
    ]
   },
