Update Willow parameter in Forest_Mano script

--- a/code/forest_mano/forest_and_mano_usage.ipynb
+++ b/code/forest_mano/forest_and_mano_usage.ipynb
@@ -355,7 +355,7 @@
     "\n",
     "\n",
     "forest.willow.log_stats.log_stats_main(\n",
-    "    data_dir, comm_output_dir, tz_str, option, beiwe_id = beiwe_ids\n",
+    "    data_dir, comm_output_dir, tz_str, option, beiwe_ids = beiwe_ids\n",
     ")"
    ]
   },
