Changed on if else statement condition

--- a/code/forest_mano/data_volume_summaries_template.ipynb
+++ b/code/forest_mano/data_volume_summaries_template.ipynb
@@ -179,12 +179,11 @@
       },
       "outputs": [],
       "source": [
-        "def filter_data(df, end_date = True, study_period_days = None):\n",
+        "def filter_data(df: pd.DataFrame, study_period_days: int | None = None) -> pd.DataFrame:\n",
         "\n",
         "    '''\n",
         "        df: using the results from \"filtered_df\" from above that already truncated off the data before registration date\n",
-        "        end_date: True or False based on the need to specify \"study_period_days\" or not\n",
-        "        study_period_days: set \"end_date\" to False before specifying this, this is required in the form of integer days\n",
+        "        study_period_days: this is required in the form of integer days, None will result in date ever recorded\n",
         "    '''\n",
         "\n",
         "    filtered_df_metrics = df.dropna(subset=df.columns[2:69], how=\"all\")\n",
@@ -194,12 +193,7 @@
         "\n",
         "    df_with_last_date = df.merge(last_dates_with_data, on='participant_id', how='left')\n",
         "\n",
-        "    if end_date:\n",
-        "        filtered_df_new = df_with_last_date[df_with_last_date['date'] <= df_with_last_date['last_dates_with_data']]\n",
-        "        filtered_df_new = filtered_df_new.drop(columns=['last_dates_with_data'])\n",
-        "        filtered_df_new = filtered_df_new.reset_index(drop=True)\n",
-        "\n",
-        "    elif study_period_days != None:\n",
+        "    if study_period_days:\n",
         "        filtered_df_new = pd.DataFrame()\n",
         "        for p_id, earliest_date in registration_date_dict.items():\n",
         "            end_date = df_with_last_date[(df_with_last_date['participant_id'] == p_id)].last_dates_with_data.unique()[0]\n",
@@ -213,9 +207,10 @@
         "                        (df['date'] <= end_date_to_use)]\n",
         "            filtered_df_new = pd.concat([filtered_df_new, temp_df])\n",
         "\n",
-        "    else:\n",
-        "        print(\"No modification occurred.\")\n",
-        "        return df\n",
+        "    else: \n",
+        "        filtered_df_new = df_with_last_date[df_with_last_date['date'] <= df_with_last_date['last_dates_with_data']]\n",
+        "        filtered_df_new = filtered_df_new.drop(columns=['last_dates_with_data'])\n",
+        "        filtered_df_new = filtered_df_new.reset_index(drop=True)\n",
         "\n",
         "    return filtered_df_new.reset_index(drop=True)"
       ]
@@ -228,8 +223,8 @@
       },
       "outputs": [],
       "source": [
-        "# test case\n",
-        "filtered_df_new = filter_data(filtered_df, end_date=False, study_period_days=2)\n",
+        "# example case\n",
+        "filtered_df_new = filter_data(filtered_df, study_period_days=2)\n",
         "## or filtered_df_new = filter_data(filtered_df) if you just need the end date of data ever recorded"
       ]
     },
