add oak concatenate functions

--- a/code/forest_mano/forest_and_mano_usage.ipynb
+++ b/code/forest_mano/forest_and_mano_usage.ipynb
@@ -472,6 +472,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from helper_functions import concatenate_summaries\n",
+    "\n",
+    "\n",
+    "concatenate_summaries(dir_path = os.path.join(direc, accelerometer_output_dir), \n",
+    "                      output_filename = os.path.join(direc,\"accel_summaries.csv\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
