fix plot data, add comment about concatenate_summaries appending frequency to filename

--- a/code/forest_mano/forest_and_mano_usage.ipynb
+++ b/code/forest_mano/forest_and_mano_usage.ipynb
@@ -308,7 +308,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now contatenate GPS summaries into one file. "
+    "We will now contatenate GPS summaries into one file. \n",
+    "\n",
+    ">*Note- this function appends the frequency value to the end of the filename e.g. \"gps_summaries_daily.csv\"*"
    ]
   },
   {
@@ -500,7 +502,7 @@
    "metadata": {},
    "source": [
     "Now, we will also be generate some time series plots using the generated statistic summaries.\n",
-    "- To read the file, we need to define **response_filename** with the concatenated dataset. Here, we are using 'gps_summary.csv'."
+    "- To read the file, we need to define **response_filename** with the concatenated dataset. Here, we are using 'gps_summaries_daily.csv'."
    ]
   },
   {
@@ -514,11 +516,17 @@
     "import pandas as pd\n",
     "\n",
     "direc = os.getcwd()\n",
-    "response_filename = 'gps_summary.csv'\n",
+    "response_filename = 'gps_summaries_daily.csv'\n",
     "path_resp = os.path.join(direc, response_filename)    \n",
     "\n",
     "# read data\n",
-    "response_data = pd.read_csv(path_resp)\n"
+    "response_data = pd.read_csv(path_resp)\n",
+    "\n",
+    "# GPS data (jasmine)\n",
+    "response_data['Date'] = pd.to_datetime(response_data[['year', 'month', 'day']])\n",
+    "\n",
+    "# Accelerometer data (oak)\n",
+    "# response_data.rename(columns={'date': 'Date'}, inplace=True)"
    ]
   },
   {
