add history_path documentation

--- a/code/forest_mano/forest_and_mano_usage.ipynb
+++ b/code/forest_mano/forest_and_mano_usage.ipynb
@@ -414,7 +414,10 @@
     "- For **tz_str**, enter the time zone where the study was conducted. Here, it's **\"America/New_York.\"** \n",
     "- For **beiwe_ids**, enter the list of Beiwe IDs to run Forest on. If this is `None`, sycamore will run on all users in the data_dir directory.\n",
     "- For **config_path**, enter the filepath to your downloaded survey config file. This can be downloaded by clicking \"edit study\" on your study page, and clicking \"Export study settings JSON file under \"Export/Import study settings\". If this is None, Sycamore will still run, but fewer outputs will be produced. \n",
-    "- For **interventions_filepath**, enter the filepath to your downloaded interventions timing file. This can be downloaded by clicking \"edit study\" on your study page, and clicking \"Download Interventions\" next to \"Intervention Data\". If this is None, Sycamore will still run, but fewer outputs will be produced. (note, this doesn't apply if you are using the main version of sycamore)"
+    "- For **interventions_filepath**, enter the filepath to your downloaded interventions timing file. This can be downloaded by clicking \"edit study\" on your study page, and clicking \"Download Interventions\" next to \"Intervention Data\". If this is None, Sycamore will still run, but fewer outputs will be produced. (note, this doesn't apply if you are using the main version of sycamore)\n",
+    "- For **history_path**, enter the filepath to your downloaded survey history file. This can be downloaded by clicking \"edit study\" on your study page, and clicking \"Download Surveys\" next to \"Survey History\". If this is None, Sycamore will still run, but fewer ouputs will be produced.\n",
+    "\n",
+    "Note: The files for **config_path**, **interventions_filepath**, and **history_path** can only be accessed by Study Admin"
    ]
   },
   {
@@ -431,12 +434,14 @@
     "beiwe_ids = None\n",
     "config_path = None\n",
     "interventions_filepath = None\n",
+    "history_path = None\n",
     "\n",
     "compute_survey_stats(\n",
     "    study_folder = data_dir, output_folder = survey_output_dir,\n",
     "    config_path = config_path, tz_str = tz_str, users = beiwe_ids,\n",
     "    start_date = time_start, end_date = time_end, \n",
-    "    interventions_filepath = interventions_filepath)"
+    "    interventions_filepath = interventions_filepath,\n",
+    "    history_path = history_path)"
    ]
   },
   {
