Updates to study settings JSON require minor changes in traversal function
Due to Yale adding a new survey to their study, the indexing of the diary within the study settings JSON changed. This commit corrects the indexing.

--- a/code/forest_mano/SurveyQC.ipynb
+++ b/code/forest_mano/SurveyQC.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "### Survey QC\n",
     "\n",
-    "Last updated: 03/26/2025\n",
+    "Last updated: 03/31/2025\n",
     "\n",
     "Summary: This data pipeline was developed out of a need for accurate survey adherence statistics for the Fucito group at Yale. The overarching goal is to identify two relevant figures, N and D. N, the numerator, is the count of *valid* surveys submitted. D, the denominator, is the count of *valid* surveys delivered. Emphasis on the *valid* - this is a culmination of several rules determined through discussions between the Fucito and Beiwe teams.   \n",
     "\n",
-    "Requirements: The raw survey data, including both survey answers and timings, has already been downloaded to a directory \"raw_data\" (this can be modified). Furthermore, part 3c of this script calls a Beiwe API, which requires a Keyring Studies file with valid access and secret keys. \n",
+    "Requirements: The raw survey data, including both survey answers and timings, has already been downloaded to a directory \"raw_data\" (this can be modified). Furthermore, part 3b extracts information from the Survey Settings and Interventions files (available in the 'Edit this Study' section of the dashboard), so these should be up to date. Finally, part 3c of this script calls a Beiwe API, which requires a Keyring Studies file with valid access and secret keys. \n",
     "\n",
     "#### Part 1: Identifying Mismatched Files\n",
     "\n",
@@ -564,7 +564,7 @@
     "    with open(file_path, 'r') as file:\n",
     "        settings = json.load(file)\n",
     "        # Access the relative schedule of the Diary survey\n",
-    "        timings = settings['surveys'][4]['relative_timings']\n",
+    "        timings = settings['surveys'][6]['relative_timings']\n",
     "        for timing in timings:\n",
     "            # Record the relative deployment day of the survey\n",
     "            notification_days.append(timing[1])\n",
