Make final numerator/denominator estiamtes

--- a/code/forest_mano/SurveyQC.ipynb
+++ b/code/forest_mano/SurveyQC.ipynb
@@ -880,7 +880,6 @@
     "                counts.loc[counts['BeiweID'] == beiwe_id, 'CheckManually'] = True\n",
     "                print(f\"[CHECK MANUALLY] Issue with notification history: {file_path}\")\n",
     "            else:\n",
-    "                \n",
     "                counts.loc[counts['BeiweID'] == beiwe_id, 'OutsideSubmissions'] += 1\n",
     "                print(f\"Submission outside of diary period: {file_path}\")\n",
     "            outside += 1\n",
@@ -908,6 +907,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "70459319",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_notification_deliveries(notifications_file, counts_file):\n",
+    "    '''\n",
+    "    Inputs:\n",
+    "        notifications_file: the csv file containing the expected and delivered notification schedule, as generated in Parts 3b/3c\n",
+    "        counts_file: the csv file containing the submission counts for each participant\n",
+    "    Output:\n",
+    "        counts: a df that adds counts of total and valid notification deliveries to the counts file\n",
+    "    Behavior:\n",
+    "        This function counts the total and valid notification deliveries for each participant\n",
+    "    '''\n",
+    "    # Read the notification log csv\n",
+    "    schedule = pd.read_csv(notifications_file)\n",
+    "    schedule['DeliveredUTC'] = schedule['DeliveredUTC'].apply(lambda x: pd.to_datetime(x))\n",
+    "\n",
+    "    # Read the final counts csv\n",
+    "    counts = pd.read_csv(counts_file)\n",
+    "    counts[\"TotalDeliveredCount\"] = 0\n",
+    "    counts[\"InvalidDeliveredCount\"] = 0\n",
+    "    for index, row in schedule.iterrows():\n",
+    "        # Extract the Beiwe ID, timestamp and date\n",
+    "        delivered_utc = pd.Timestamp(row['DeliveredUTC'])\n",
+    "        delivered_date = delivered_utc.date()\n",
+    "        calculated_date = pd.Timestamp(row['CalculatedDate']).date()\n",
+    "        beiwe_id = row['BeiweID']\n",
+    "\n",
+    "        # Check if the participant is in the counts file\n",
+    "        if beiwe_id in counts['BeiweID'].values:\n",
+    "\n",
+    "            # Check if the delivered utc field is not null\n",
+    "            if pd.notna(delivered_utc):\n",
+    "\n",
+    "                # Increment the total delivered count\n",
+    "                counts.loc[counts['BeiweID'] == beiwe_id, 'TotalDeliveredCount'] += 1\n",
+    "\n",
+    "                # Check if the delivered date is the same as the calculated date\n",
+    "                print(delivered_date, calculated_date)\n",
+    "                if delivered_date != calculated_date:\n",
+    "\n",
+    "                    # Increment the valid delivered count\n",
+    "                    counts.loc[counts['BeiweID'] == beiwe_id, 'InvalidDeliveredCount'] += 1\n",
+    "\n",
+    "    counts['NumeratorEstimate'] = counts['SurveyCount'] - counts['DoubleSubmissions'] - counts['OutsideSubmissions']\n",
+    "    counts['DenominatorEstimate'] = counts['TotalDeliveredCount'] - counts['InvalidDeliveredCount']\n",
+    "    counts['Adherence%Estimate'] = ((counts['NumeratorEstimate'] / counts['DenominatorEstimate']) * 100).round(3)\n",
+    "                    \n",
+    "    return counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9f42c4aa-da61-4de5-9563-52ee454dd6b7",
    "metadata": {},
    "outputs": [],
@@ -916,23 +970,35 @@
     "answers_file = \"answers_log_full.csv\"\n",
     "counts_file = \"final_counts.csv\"\n",
     "schedule, counts, answers = match_answers_to_notifications(notifications_file, answers_file, counts_file)\n",
+    "# Update the notification log with the submission counts\n",
     "schedule.to_csv(\"notification_dates_log_with_deliveries_and_submissions.csv\", index = False)\n",
     "\n",
+    "# Save an answer logs containing only the valid submissions\n",
     "answers = answers[['BeiweID','Date','Burst','TimestampUTC','FilePath']]\n",
     "answers.to_csv(\"answers_log_filtered.csv\", index = False)\n",
     "\n",
+    "# Update the counts file with the total and valid notification deliveries\n",
+    "counts = count_notification_deliveries(notifications_file, counts_file)\n",
+    "\n",
+    "# Update final counts \n",
     "counts = counts.sort_values(by=['LastSurvey', 'BeiweID'])\n",
-    "counts = counts[['BeiweID','EnrollmentDate', 'LastSurvey', 'SurveyCount', 'DoubleSubmissions', 'OutsideSubmissions', 'CheckManually']]\n",
+    "counts = counts[\n",
+    "    ['BeiweID',\n",
+    "     'EnrollmentDate',\n",
+    "     'LastSurvey',\n",
+    "     'SurveyCount',\n",
+    "     'DoubleSubmissions',\n",
+    "     'OutsideSubmissions', \n",
+    "     'CheckManually', \n",
+    "     'TotalDeliveredCount', \n",
+    "     'InvalidDeliveredCount', \n",
+    "     'NumeratorEstimate', \n",
+    "     'DenominatorEstimate', \n",
+    "     'Adherence%Estimate'\n",
+    "     ]\n",
+    "]\n",
     "counts.to_csv(\"final_counts.csv\", index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c83c0098-acad-4573-bcb6-3a10e6572a8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
