--- a/code/forest_mano/SurveyQC.ipynb
+++ b/code/forest_mano/SurveyQC.ipynb
@@ -106,6 +106,12 @@
     "        \n",
     "        # Iterate through survey answers files and gather their submission time via the file name\n",
     "        for file in os.listdir(survey_answers_survey_dir):\n",
+    "\n",
+    "            # Skip duplicates of files\n",
+    "            if not re.search(r'\\+00_00\\.csv$', file):\n",
+    "                # Skip if there's anything extra after +00_00\n",
+    "                continue\n",
+    "            \n",
     "            file_path = os.path.join(survey_answers_survey_dir, file)\n",
     "            submission_time = os.path.splitext(file)[0]\n",
     "            extension = os.path.splitext(file)[1]\n",
@@ -911,11 +917,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_notification_deliveries(notifications_file, counts_file):\n",
+    "def count_notification_deliveries(notifications_file, counts):\n",
     "    '''\n",
     "    Inputs:\n",
     "        notifications_file: the csv file containing the expected and delivered notification schedule, as generated in Parts 3b/3c\n",
-    "        counts_file: the csv file containing the submission counts for each participant\n",
+    "        counts_file: the submission counts for each participant\n",
     "    Output:\n",
     "        counts: a df that adds counts of total and valid notification deliveries to the counts file\n",
     "    Behavior:\n",
@@ -925,8 +931,7 @@
     "    schedule = pd.read_csv(notifications_file)\n",
     "    schedule['DeliveredUTC'] = schedule['DeliveredUTC'].apply(lambda x: pd.to_datetime(x))\n",
     "\n",
-    "    # Read the final counts csv\n",
-    "    counts = pd.read_csv(counts_file)\n",
+    "    # Read add some columns to the counts df\n",
     "    counts[\"TotalDeliveredCount\"] = 0\n",
     "    counts[\"InvalidDeliveredCount\"] = 0\n",
     "    for index, row in schedule.iterrows():\n",
@@ -946,16 +951,14 @@
     "                counts.loc[counts['BeiweID'] == beiwe_id, 'TotalDeliveredCount'] += 1\n",
     "\n",
     "                # Check if the delivered date is the same as the calculated date\n",
-    "                print(delivered_date, calculated_date)\n",
-    "                if delivered_date != calculated_date:\n",
+    "                if abs((delivered_date - calculated_date).days) > 1:\n",
     "\n",
     "                    # Increment the valid delivered count\n",
     "                    counts.loc[counts['BeiweID'] == beiwe_id, 'InvalidDeliveredCount'] += 1\n",
     "\n",
     "    counts['NumeratorEstimate'] = counts['SurveyCount'] - counts['DoubleSubmissions'] - counts['OutsideSubmissions']\n",
     "    counts['DenominatorEstimate'] = counts['TotalDeliveredCount'] - counts['InvalidDeliveredCount']\n",
-    "    counts['Adherence%Estimate'] = ((counts['NumeratorEstimate'] / counts['DenominatorEstimate']) * 100).round(3)\n",
-    "                    \n",
+    "    counts['Adherence%Estimate'] = ((counts['NumeratorEstimate'] / counts['DenominatorEstimate']) * 100).round(3)            \n",
     "    return counts"
    ]
   },
@@ -978,7 +981,7 @@
     "answers.to_csv(\"answers_log_filtered.csv\", index = False)\n",
     "\n",
     "# Update the counts file with the total and valid notification deliveries\n",
-    "counts = count_notification_deliveries(notifications_file, counts_file)\n",
+    "counts = count_notification_deliveries(notifications_file, counts)\n",
     "\n",
     "# Update final counts \n",
     "counts = counts.sort_values(by=['LastSurvey', 'BeiweID'])\n",
