Revised SurveyQC for Fucito
Made changes to match_answers_to_notifications to avoid unbound error

--- a/code/forest_mano/SurveyQC.ipynb
+++ b/code/forest_mano/SurveyQC.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "# Uncomment the line below and use it to install any necessary packages.\n",
-    "#%pip install ..."
+    "%pip install matplotlib"
    ]
   },
   {
@@ -45,6 +45,7 @@
     "from datetime import timedelta\n",
     "import requests\n",
     "import orjson\n",
+    "import re\n",
     "import data_summaries"
    ]
   },
@@ -299,7 +300,7 @@
     "# This command deletes any .ipynb_checkpoints which can interfere with file iteration\n",
     "!rm -rf $(find . -type d -name .ipynb_checkpoints)\n",
     "\n",
-    "base_dir = \"raw_data\"\n",
+    "base_dir = \"files/raw_data\"\n",
     "identify_unmatched_files(base_dir)"
    ]
   },
@@ -499,7 +500,7 @@
    "outputs": [],
    "source": [
     "!rm -rf $(find . -type f -name .DS_Store)\n",
-    "base_dir = \"raw_data\"\n",
+    "base_dir = \"files/raw_data\"\n",
     "log = generate_answers_log(base_dir, survey_id=\"PmZQCMHU8cAhIdZshFuipCPi\")\n",
     "log.to_csv('answers_log_full.csv', index=False)\n",
     "\n",
@@ -587,11 +588,11 @@
     "        expected survey schedule for each participant\n",
     "    '''\n",
     "    # Gather enrollment data from the intervention file\n",
-    "    interventions_file = \"m4z54N5SU7Eqq2LbwmxQd2UN_intervention_data.json\"\n",
+    "    interventions_file = \"files/m4z54N5SU7Eqq2LbwmxQd2UN_intervention_data.json\"\n",
     "    interventions = read_interventions_file(interventions_file)\n",
     "\n",
     "    # Gather scheduling data using the settings file\n",
-    "    settings_file = \"Yale_Fucito_Young_Adult_Alcohol_-_Live_Study_surveys_and_settings.json\"\n",
+    "    settings_file = \"files/Yale_Fucito_Young_Adult_Alcohol_-_Live_Study_surveys_and_settings.json\"\n",
     "    settings = read_settings_file(settings_file)\n",
     "\n",
     "    # Initiate a new list to track the full expected schedule of surveys for all participants\n",
@@ -765,7 +766,7 @@
     "    users = schedule['BeiweID'].unique()\n",
     "    \n",
     "    # Read the keyring_studies file to get the API access and secret keys\n",
-    "    kr = data_summaries.read_keyring(\"keyring_studies.py\")\n",
+    "    kr = data_summaries.read_keyring(\"files/keyring_studies.py\")\n",
     "    access_key = kr.get(\"ACCESS_KEY\")\n",
     "    secret_key = kr.get(\"SECRET_KEY\")\n",
     "\n",
@@ -826,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b28e81f-b3c4-4d2a-8c2a-ed54410dec71",
+   "id": "2f94ce11-2375-412c-889a-7a4d714edf1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,69 +846,82 @@
     "    '''\n",
     "    # Read the notification log csv\n",
     "    schedule = pd.read_csv(notifications_file)\n",
-    "    schedule['DeliveredUTC'] = schedule['DeliveredUTC'].apply(lambda x: pd.to_datetime(x))\n",
-    "    schedule['TruncatedUTC'] = schedule['TruncatedUTC'].apply(lambda x: pd.to_datetime(x))\n",
+    "    schedule['DeliveredUTC'] = pd.to_datetime(schedule['DeliveredUTC'])\n",
+    "    schedule['TruncatedUTC'] = pd.to_datetime(schedule['TruncatedUTC'])\n",
     "    schedule['SurveysSubmitted'] = 0\n",
     "\n",
     "    # Read the answers log csv\n",
     "    answers = pd.read_csv(answers_file)\n",
     "\n",
     "    # Read the final counts csv\n",
-    "    counts = pd.read_csv(counts_file)\n",
+    "    counts  = pd.read_csv(counts_file)\n",
     "    counts[\"DoubleSubmissions\"] = 0\n",
     "    counts[\"OutsideSubmissions\"] = 0\n",
     "    counts[\"CheckManually\"] = False\n",
     "\n",
     "    # Create a list for the filtered answers log\n",
     "    filtered_answers = []\n",
-    "\n",
-    "    outside, extra = 0,0\n",
+    "    outside, extra = 0, 0\n",
     "\n",
     "    # Iterate each row of the answers log\n",
-    "    for index, row in answers.iterrows():\n",
+    "    for _, row in answers.iterrows():\n",
     "        # Extract the Beiwe ID, timestamp and file path\n",
     "        timestamp = pd.Timestamp(row['TimestampUTC'])\n",
     "        date = row['Date']\n",
-    "        beiwe_id = row['BeiweID']\n",
+    "        beiwe_id  = row['BeiweID']\n",
     "        file_path = row['FilePath']\n",
     "\n",
-    "        # Look for notification delibery corresponding to the answer submission\n",
+    "        # match on same participant and notification window containing timestamp\n",
     "        mask = (\n",
     "            (schedule['BeiweID'] == beiwe_id) &\n",
-    "            (schedule['DeliveredUTC'] < timestamp) & \n",
-    "            (schedule['TruncatedUTC'] > timestamp)\n",
+    "            (schedule['DeliveredUTC'] <= timestamp) &   # inclusive bounds are usually safer\n",
+    "            (schedule['TruncatedUTC'] >= timestamp)\n",
     "        )\n",
     "\n",
-    "        # Indicator whether this is a valid row\n",
     "        valid_row = True\n",
-    "        \n",
+    "        burst = None\n",
+    "\n",
     "        if schedule.loc[mask].empty:\n",
-    "            if not schedule.loc[(schedule['BeiweID'] == beiwe_id) & (schedule['CalculatedDate'] == date)].empty:\n",
+    "            # No window covers this timestamp — either missing history or truly outside period\n",
+    "            if not schedule.loc[\n",
+    "                (schedule['BeiweID'] == beiwe_id) & (schedule['CalculatedDate'] == date)\n",
+    "            ].empty:\n",
     "                counts.loc[counts['BeiweID'] == beiwe_id, 'CheckManually'] = True\n",
     "                print(f\"[CHECK MANUALLY] Issue with notification history: {file_path}\")\n",
     "            else:\n",
     "                counts.loc[counts['BeiweID'] == beiwe_id, 'OutsideSubmissions'] += 1\n",
     "                print(f\"Submission outside of diary period: {file_path}\")\n",
     "            outside += 1\n",
+    "            valid_row = False  # <<< critical: don't treat as valid\n",
     "        else:\n",
+    "            # There is a matching window — record burst and increment count\n",
     "            burst = schedule.loc[mask, 'Burst'].iloc[0]\n",
-    "            \n",
-    "        schedule.loc[mask, 'SurveysSubmitted'] = schedule.loc[mask, 'SurveysSubmitted'] + 1\n",
+    "            schedule.loc[mask, 'SurveysSubmitted'] = schedule.loc[mask, 'SurveysSubmitted'] + 1\n",
     "\n",
-    "        if (schedule.loc[mask, 'SurveysSubmitted'] > 1).any():\n",
-    "            valid_row = False\n",
-    "            counts.loc[counts['BeiweID'] == beiwe_id, 'DoubleSubmissions'] += 1\n",
-    "            print(f\"Unexpected extra submission: {file_path}\")\n",
-    "            extra += 1\n",
+    "            # If any matching window now has >1 submission, mark as extra (double)\n",
+    "            if (schedule.loc[mask, 'SurveysSubmitted'] > 1).any():\n",
+    "                valid_row = False\n",
+    "                counts.loc[counts['BeiweID'] == beiwe_id, 'DoubleSubmissions'] += 1\n",
+    "                print(f\"Unexpected extra submission: {file_path}\")\n",
+    "                extra += 1\n",
     "\n",
     "        if valid_row:\n",
-    "            row['Burst'] = burst\n",
-    "            filtered_answers.append(row)\n",
+    "            filtered_answers.append({\n",
+    "                'BeiweID': beiwe_id,\n",
+    "                'Date': date,\n",
+    "                'TimestampUTC': row['TimestampUTC'],\n",
+    "                'FilePath': file_path,\n",
+    "                'Burst': burst\n",
+    "            })\n",
     "\n",
     "    print(f\"Total submissions outside of diary periods: {outside}\")\n",
     "    print(f\"Total submission periods (days) with multiple submissions: {extra}\")\n",
-    "    filtered_answers = pd.DataFrame(filtered_answers, columns=['BeiweID','Date','TimestampUTC','FilePath','Burst'])\n",
-    "    return schedule, counts, filtered_answers"
+    "\n",
+    "    filtered_answers = pd.DataFrame(\n",
+    "        filtered_answers,\n",
+    "        columns=['BeiweID','Date','TimestampUTC','FilePath','Burst']\n",
+    "    )\n",
+    "    return schedule, counts, filtered_answers\n"
    ]
   },
   {
@@ -1020,7 +1034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
